--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.8","3.9","3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -17,3 +17,19 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+ 
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+      - name: Upload artifact
+        run: |
+          echo "Uploading artifact for Python ${{ matrix.python-version }}"
+          artifacts:
+            name: artifact
+            files:
+              - artifact.txt
+          
