--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -16,18 +16,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
- 
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+        run: python -c "import sys; open('python_version_${{ matrix.python-version }}.txt', 'w').write(sys.version)"
       - name: Upload artifact
-        run: |
-          echo "Uploading artifact for Python ${{ matrix.python-version }}"
-          echo "python-version: ${{ matrix.python-version }}" >> sys_version.txt
-          upload-artifact sys_version.txt
+        uses: actions/upload-artifact@v2
+        with:
+          name: python-version-${{ matrix.python-version }}
+          path: python_version_${{ matrix.python-version }}.txt
           
